nsis (2.49-1) UNRELEASED; urgency=medium

  * New upstream release
    - Fixed CreateShortcut failure on Vista caused by security changes

 -- Thomas Gaugler <thomas@dadie.net>  Sat, 19 Dec 2015 17:28:50 +0100

nsis (2.48-2) unstable; urgency=medium

  * Build makensis in build-indep to fix indep-only FTBFS

 -- Didier Raboud <odyx@debian.org>  Tue, 15 Dec 2015 15:02:09 +0100

nsis (2.48-1) unstable; urgency=medium

  * New upstream release
    - LoadLibrary security hardening to prevent dll hijacking
      (Bug #1125, Closes: #806036)

  * Updated to Standards-Version 3.9.6
  * Acknowledge NMU

 -- Thomas Gaugler <thomas@dadie.net>  Tue, 15 Dec 2015 10:51:30 +0100

nsis (2.46-10.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Build with -fgnu89-inline. Closes: #778029.

 -- Matthias Klose <doko@debian.org>  Fri, 10 Jul 2015 13:59:55 +0200

nsis (2.46-10) unstable; urgency=medium

  * Fail the build if libwinpthread is needed at runtime (see #722898)

 -- Didier Raboud <odyx@debian.org>  Mon, 15 Dec 2014 22:58:06 +0100

nsis (2.46-9) unstable; urgency=medium

  [ Didier Raboud ]
  * Update Vcs-* URLs to be canonical.

  [ Thomas Gaugler ]
  * Fix of GCC stdcall attribute warnings occurring for targets other
    than Windows.
  * Overwrite lintian warning about missing Large File Support (LFS). 
  * Replace duplicate image files of Modern UI with symbolic links. 
  * Probe for built makensis instead of using wildcard function.
  * Use correct syntax for invoking shell function from make.
  * Rely on PATH environment for finding mingw-w64 rather than
    explicitly searching for it.
  * Suggest wine package for any architecture it is available.
  * Fix test run on s390x by using stdint.h for portable data type
    definitions. (Closes: #754679)

 -- Thomas Gaugler <thomas@dadie.net>  Mon, 14 Jul 2014 20:25:01 +0200

nsis (2.46-8) unstable; urgency=low

  * Dropped superfluous build dependency of libstdc++6-4.6-dev because