@@ -3,7 +3,7 @@ Section: devel
 Priority: optional
 Maintainer: Thomas Gaugler <thomas@dadie.net>
 Uploaders: Didier Raboud <odyx@debian.org>
-Build-Depends: debhelper (>= 9), scons (>= 1.2.0), xmlto, html2text, libcppunit-dev, zlib1g-dev, mingw-w64 (>= 1.0)
+Build-Depends: debhelper (>= 9), docbook5-xml, docbook-xsl-ns, html2text, libcppunit-dev, mingw-w64 (>= 1.0), scons (>= 1.2.0), xsltproc, zlib1g-dev
 Standards-Version: 3.9.6
 Homepage: http://nsis.sourceforge.net/
 Vcs-Git: https://alioth.debian.org/anonscm/git/collab-maint/nsis.git
